--- a/BappDescription.html
+++ b/BappDescription.html
@@ -1,1 +1,1 @@
-<p>Context menu on steroïds</p>
+<p> HopLa adds autocompletion support and useful payloads in Burp Suite to make your intrusion easier.</p>
